--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-169.4KB/s(Youtube:不良林), server: hk003.369boy.com, port: 32502, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: hk003.369boy.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.36MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.95MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 5.183.32.187, port: 22610, type: vmess, uuid: 46a2f46a-c56f-487b-b2c9-b4204bf8021e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.77MB/s(Youtube:不良林), server: lakshan-india.duckdns.org, port: 11060, type: vmess, uuid: ac0598c6-8b3e-44b0-b0ee-f973b51a4a08, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lakshan-india.duckdns.org}}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
+  - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇯🇵 日本-15.21MB/s(Youtube:不良林), server: vjp1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vjp1.0bad.com}}
-  - {name: 🇯🇵 日本-18.74MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
-  - {name: 🇺🇸 美国-10.06MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11263, type: vmess, uuid: 98672ce2-03ff-4309-94b6-65a6c04d8f25, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
-  - {name: 🇸🇬 新加坡-1.60MB/s(Youtube:不良林), server: lakshan-singapore.duckdns.org, port: 54617, type: vmess, uuid: 82d8b43a-5a15-44b1-9977-ada4aa03cd62, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lakshan-singapore.duckdns.org}}
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: agem.xiaohouzi.club, port: 10051, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: agem.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: agem.xiaohouzi.club, port: 10051, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: agem.xiaohouzi.club}}
   - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: us.vless.fun, port: 443, type: trojan, password: password, sni: us.vless.fun, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.32MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.40MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-169.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.36MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-15.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-18.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.06MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
