--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-12.14MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.41MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-8.47MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.93MB/s(Youtube:不良林), server: zgao.xyz, port: 443, type: trojan, password: nsTcmFBI, sni: zgao.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.75MB/s(Youtube:不良林), server: 120.233.186.59, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.15MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-737.0KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk64.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-432.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇨🇳 中国-446.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-550.1KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇺🇸 美国-437.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.76MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,21 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +75,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +106,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +131,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-12.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.38MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-432.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-446.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-550.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.9KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
