--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,117 +5,81 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-6.87MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.65MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-7.81MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.56MB/s(Youtube:不良林), server: 211.72.35.158, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-221.4KB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20004, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20009, type: trojan, password: f7e7b38f-79d5-4860-8687-f8c083e13da4, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-345.0KB/s(Youtube:不良林), server: hk64.fans8.xyz, port: 443, type: trojan, password: cd4417a2-588c-485d-a796-ee6e090f8836, sni: hk64.fans8.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-263.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇫🇷 法国-1.56MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.97MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,16 +95,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-6.87MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.65MB/s(Youtube:不良林)
       - 🇨🇳 台湾-7.81MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-221.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-263.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.83MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.97MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
